<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ICMA.promedy.Promedy.ayudaAcademica">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nombreCurso2"
            android:layout_width="313dp"
            android:layout_height="65dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="#F8F8F8"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/alegreya_sc_black"
            android:text="@string/pedirayuda"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="292dp"
            android:layout_marginEnd="47dp"
            android:fontFamily="@font/alegreya_sc_black"
            android:text="@string/ingresarcurso"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.724"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView82"
            android:layout_width="158dp"
            android:layout_height="110dp"
            android:layout_marginTop="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/okay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreCurso2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:onClick="video"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView62"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView92"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/alegreya_sc_black"
                        android:text="@string/videos"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView92"
                        android:layout_width="87dp"
                        android:layout_height="79dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="146dp"
                        android:layout_marginLeft="146dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="138dp"
                        android:layout_marginRight="138dp"
                        app:srcCompat="@drawable/compass" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-7031806659052855/3313459559"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>